test/pass/pass_18.prsl
// RUN: %edir/prsl --codegen %s --output-file=pass_18.ll
// RUN: clang++ -Wno-override-module pass_18.ll -o pass_18
// RUN: %S/pass_18 | filecheck %s --match-full-lines
// RUN: %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 0
// CHECK-NEXT: 0
// CHECK-NEXT: 1

a={};
{};
print {};
print a;
print {} + 1;